<resources>
    <string name="app_name">Multi Language App</string>
    <string name="welcome">Welcome!</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up_prompt">Don\'t have account? Sign Up</string>
    <string name="empty_fields">Please fill all fields</string>
    <string name="login_success">Login successful!</string>
</resources>